tried to fix style problems on IE

--- a/public/stylesheets/blogs_extras.css
+++ b/public/stylesheets/blogs_extras.css
@@ -14,3 +14,7 @@
   padding: 5 10 5 10;
 }
 
+.dp-highlighter {
+  clear: both;
+}
+
